--- a/less/ppq.less
+++ b/less/ppq.less
@@ -36,6 +36,8 @@
         width: 50px;
         height: 50px;
         display:none;
+        background-color: @item-text-color;
+        border-radius: 50%;
         &.ppq-pin-icon {
             display:block;
         }
