Pin styling update

--- a/less/ppq.less
+++ b/less/ppq.less
@@ -1,87 +1,137 @@
 .ppq-audio-component {
 
-    .ppq-pinboard-container-inner {
-        position: relative;
+  .ppq-pinboard-container-inner {
+    position: relative;
+  }
+
+  .ppq-pinboard {
+    display: block;
+
+    &.developer-mode {
+      position: relative;
+      z-index: 0;
+      opacity: 0.4;
+    }
+  }
+
+  .ppq-pin {
+    text-decoration: none;
+    position: absolute;
+    z-index: 0;
+    visibility: hidden;
+
+    &.in-use {
+      visibility: visible;
     }
 
-    .ppq-pinboard {
-        display: block;
-        cursor: pointer;
-        &.developer-mode {
-            position: relative;
-            z-index: 0;
-            opacity:0.4;
-        }
+    .ppq-correct-icon {
+      display: none;
     }
 
-    .ppq-pin {
-        text-decoration: none;
-        position: absolute;
-        z-index: 0;
-        visibility:hidden;
-        cursor: pointer;
-        &.in-use {
-            visibility: visible;
+    .ppq-incorrect-icon {
+      display: none;
+    }
+
+    .no-touch &:hover {
+    	.ppq-icon {
+    		color: @item-text-color-hover;
+    		background-color: @item-color-hover;
+    	}
+    }
+  }
+
+  .ppq-icon {
+    display: none;
+    padding: @item-padding;
+  	font-size: (@icon-size*1.5);
+  	width: auto;
+  	height: auto;
+    color: @item-text-color;
+    background-color: @item-color;
+    border-radius: 50%;
+
+    &.ppq-pin-icon {
+      display: block;
+    }
+
+    &.ppq-correct-icon {
+      color: @icon-correct-color;
+      background-color: @item-text-color;
+    }
+
+    &.ppq-incorrect-icon {
+      color: @icon-incorrect-color;
+      background-color: @item-text-color;
+    }
+  }
+
+  .ppq-correct-zone {
+    position: absolute;
+    background-color: #f55;
+  }
+
+  .ppq-widget {
+    &:not(.submitted) {
+      cursor: pointer;
+
+      &.show-pins {
+        .ppq-pinboard {
+          cursor: default;
         }
-        .ppq-correct-icon {
-            display:none;
+
+        .ppq-pin {
+          cursor: pointer;
         }
+      }
+  	}
+
+    &.show-user-answer {
+      .ppq-pin-icon {
+        display: none;
+      }
+
+      .incorrect {
         .ppq-incorrect-icon {
-            display:none;
+          display: block;
         }
+      }
+
+      .correct {
+        .ppq-correct-icon {
+          display: block;
+        }
+      }
     }
 
-    .ppq-icon {
-        font-size: 50px;
-        width: 50px;
-        height: 50px;
-        display:none;
-        background-color: @item-text-color;
-        border-radius: 50%;
-        &.ppq-pin-icon {
-            display:block;
-        }
-        &.ppq-correct-icon {
+    &.show-correct-answer {
+      .ppq-pin-icon {
+        display: none;
+      }
+
+      .incorrect .ppq-correct-icon,
+      .correct .ppq-correct-icon {
+        display: block;
+      }
+    }
+
+    &.submitted {
+      .ppq-pin {
+        .no-touch &:hover {
+          cursor: default;
+
+          .ppq-icon {
+          	background-color: @item-text-color;
+          }
+
+          .ppq-correct-icon {
             color: @icon-correct-color;
-        }
-        &.ppq-incorrect-icon {
+          }
+
+          .ppq-incorrect-icon {
             color: @icon-incorrect-color;
+          }
         }
+      }
     }
-
-    .ppq-correct-zone {
-        position: absolute;
-        background-color:#f55;
-    }
-
-    .ppq-widget {
-
-        cursor: default;
-
-        &.show-user-answer {
-            .ppq-pin-icon {
-                display:none;
-            }
-            .incorrect {
-                .ppq-incorrect-icon {
-                    display:block;
-                }
-            }
-            .correct {
-                .ppq-correct-icon {
-                    display:block;
-                }
-            }
-        }
-
-        &.show-correct-answer {
-            .ppq-pin-icon {
-                display:none;
-            }
-            .incorrect .ppq-correct-icon,
-            .correct .ppq-correct-icon {
-                display:block;
-            }
-        }
-    }
+  }
 }
